add blogs/watcher_tree_files draft

--- a/public/blogs_index/index.html
+++ b/public/blogs_index/index.html
@@ -277,7 +277,6 @@ window.MathJax = {
 
 
 <div class="blogs_index">
-
   <a href="/blogs/create_hugo_website/" class="no-underline-except-hover">
   How to <strong>create</strong> a <strong>Hugo-scroll web</strong>site
   </a>
@@ -299,7 +298,6 @@ window.MathJax = {
   <span style="font-family: 'Great Vibes', cursive; font-size: 3.1rem;">custom fonts</span>:
   <strong>system</strong>-wide setup <strong>& Hugo</strong> integration
   </a>
-
 </div>
 
 
@@ -307,7 +305,6 @@ window.MathJax = {
 
 
 <div class="blogs_index">
-
   <a href="/blogs/color_picker/" class="no-underline-except-hover">
   🎨 <strong>Color picker</strong> enhanced
   </a>
@@ -322,12 +319,10 @@ window.MathJax = {
 
 
 <div class="blogs_index">
-
   <a href="/blogs/tolkien/" class="no-underline-except-hover">
   <span style="font-family: 'MiddleEarth JoannaVu', cursive; font-size: 2.3rem;">Tolkien</span>:
   books, podcasts and much more!
   </a>
-
 </div>
 
 
@@ -335,9 +330,9 @@ window.MathJax = {
 
 
 <div class="blogs_index">
-
   <a href="/blogs/instagram_mosaic/" class="no-underline-except-hover">
-  Create an <strong>Instagram mosaic</strong> on the terminal</a>
+  Create an <strong>Instagram mosaic</strong> on the terminal
+  </a>
   <br>
 </div>
 
