--- a/public/blogs/instagram_mosaic/index.html
+++ b/public/blogs/instagram_mosaic/index.html
@@ -325,7 +325,7 @@ The local preview and <a href="https://www.instagram.com/juanmarinerotarazona/">
 
   <table class="data-table">
     <tr>
-      <td class="data-cell image-cell">
+      <td class="data-cell">
         <img src="/images/blogs/instagram_mosaic/screenshot_preview_final_imgs_01.png" alt="screenshot_preview_final_imgs_01.PNG" class="table-image">
       </td>
       <td class="data-cell">
