feat (blogs/hugo_page_bundles): add Berkay Çubuk YouTube video

--- a/public/blogs/hugo_page_bundles/index.html
+++ b/public/blogs/hugo_page_bundles/index.html
@@ -54,7 +54,7 @@
 
   <meta itemprop="name" content="Hugo&#39;s page bundles: the basics">
   <meta itemprop="description" content="Learn how to structure content in Hugo using page and branch bundles. A guide to creating, managing, and troubleshooting your site architecture.">
-  <meta itemprop="wordCount" content="6217">
+  <meta itemprop="wordCount" content="6229">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Hugo,page bundles,branch bundles,headless bundle,hugo list command,content organization,Hugo templates,template lookup order,leaf bundle,hugo debug,gohugo,static site generator">
 
@@ -671,6 +671,11 @@ since its first line <code>{{ define &quot;main&quot; }}</code> is closed by a <
 <p>If you need to consolidate the Hugo&rsquo;s content knowledges we have introduced, just follow this 5 minutes tutorial building
 <a href="https://til.simonwillison.net/hugo/basic">The <strong>most basic</strong> possible <strong>Hugo site</strong></a>.
 It&rsquo;s based on this <a href="https://gist.github.com/simonw/6f7b6a40713b36749da845065985bb28">Gist</a>.</p>
+<p>I recommend to the following 40+ minutes video by <a href="https://www.youtube.com/@berkaycubuk">Berkay Çubuk</a> too.</p>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen" loading="lazy" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/aSd_Ha5nDkM?autoplay=0&amp;controls=1&amp;end=0&amp;loop=0&amp;mute=0&amp;start=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" title="YouTube video"></iframe>
+    </div>
+
 <p>Finally, if you mastered everything till now, then try to understand further
 <a href="https://gohugo.io/content-management/build-options/#example--headless-page">headless page</a> examples,
 not just the Hugo Scroll mainsite. For example:</p>
