fix(leaf_bundle_wrong/index.md): link to ./post_1.md

--- a/public/leaf_bundle_wrong/index.html
+++ b/public/leaf_bundle_wrong/index.html
@@ -59,7 +59,7 @@
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="Hugo&#39;s leaf bundle wrong index.md">
   <meta property="og:description" content="In a leaft bundle just index.md is rendered as an individual page. Current page.
-The /leaf_bundle_wrong/post_1 link does not work. The /post_1 link does not work. A branch bundle does not has this problem:
+The /leaf_bundle_wrong/post_1 link does not work. The ./post_1 link does not work. A branch bundle does not has this problem:
 The /leaf_bundle_to_branch_bundle/post_1 link works. Keep reading Hugo’s page bundles post.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
@@ -70,13 +70,13 @@ The /leaf_bundle_to_branch_bundle/post_1 link works. Keep reading Hugo’s page 
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="Hugo&#39;s leaf bundle wrong index.md">
   <meta name="twitter:description" content="In a leaft bundle just index.md is rendered as an individual page. Current page.
-The /leaf_bundle_wrong/post_1 link does not work. The /post_1 link does not work. A branch bundle does not has this problem:
+The /leaf_bundle_wrong/post_1 link does not work. The ./post_1 link does not work. A branch bundle does not has this problem:
 The /leaf_bundle_to_branch_bundle/post_1 link works. Keep reading Hugo’s page bundles post.">
 
 
   <meta itemprop="name" content="Hugo&#39;s leaf bundle wrong index.md">
   <meta itemprop="description" content="In a leaft bundle just index.md is rendered as an individual page. Current page.
-The /leaf_bundle_wrong/post_1 link does not work. The /post_1 link does not work. A branch bundle does not has this problem:
+The /leaf_bundle_wrong/post_1 link does not work. The ./post_1 link does not work. A branch bundle does not has this problem:
 The /leaf_bundle_to_branch_bundle/post_1 link works. Keep reading Hugo’s page bundles post.">
   <meta itemprop="wordCount" content="44">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
@@ -276,7 +276,7 @@ window.MathJax = {
         <p>In a <em>leaft bundle</em> just <code>index.md</code> is rendered as an individual page. Current page.</p>
 <ul>
 <li>The <a href="/leaf_bundle_wrong/post_1"><code>/leaf_bundle_wrong/post_1</code></a> link does <strong>not</strong> work.</li>
-<li>The <a href="/post_1"><code>/post_1</code></a> link does <strong>not</strong> work.</li>
+<li>The <a href="./post_1"><code>./post_1</code></a> link does <strong>not</strong> work.</li>
 </ul>
 <p>A <em>branch bundle</em> does not has this problem:</p>
 <ul>
