--- a/public/blogs/hugo_page_bundles/index.html
+++ b/public/blogs/hugo_page_bundles/index.html
@@ -54,7 +54,7 @@
 
   <meta itemprop="name" content="Hugo&#39;s page bundles: the basics">
   <meta itemprop="description" content="Learn how to structure content in Hugo using page and branch bundles. A guide to creating, managing, and troubleshooting your site architecture.">
-  <meta itemprop="wordCount" content="7486">
+  <meta itemprop="wordCount" content="7649">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Hugo,page bundles,branch bundles,headless bundle,hugo list command,content organization,Hugo templates,template lookup order,leaf bundle,hugo debug,gohugo,static site generator">
 
@@ -286,6 +286,33 @@ window.MathJax = {
 <ul>
 <li>The Hugo Scroll <a href="/blogs/hugo_page_bundles/#hugo-scroll-dedicated-pages">dedicated pages</a></li>
 <li>A branch bundle <a href="/blogs/hugo_page_bundles/#practical-example">practical example</a></li>
+</ul>
+</li>
+</ul>
+<h5 id="attention">Attention!</h5>
+<ul>
+<li>
+<p>The following sections are organized sequentially to build upon concepts progressively.
+For the best learning experience, a <strong>sequential read order</strong> is recommended.</p>
+</li>
+<li>
+<p>In this guide, we will reference the <code>layouts/</code> directory as if we had copied the entire layout structure from the Hugo Scroll theme into our project root.
+This is purely for brevity and to simplify path references.
+In reality, any reference to <code>layouts/</code> pertains to <code>themes/hugo-scroll/layouts</code>, unless we explicitly create or modify a layout template within our project&rsquo;s own <code>layouts/</code> directory.</p>
+</li>
+<li>
+<p>In practice, you should <strong>not</strong> copy the entire <code>layouts/</code> directory from a theme.
+Only copy specific layout files you intend to customize.
+This approach ensures you leverage the theme&rsquo;s structure without unnecessary duplication, keeping your project clean and maintainable.</p>
+</li>
+<li>
+<p>For a detailed, step-by-step guide on how to set this up properly, read <a href="/blogs/create_hugo_website/">How to <strong>create</strong> a <strong>Hugo-scroll web</strong>site</a>.
+In summary, start your project by copying only these essential directories and files from the example site:</p>
+<ul>
+<li><code>assets/</code></li>
+<li><code>content/</code></li>
+<li><code>config.toml</code></li>
+<li><code>layouts/partials/custom_head.html</code></li>
 </ul>
 </li>
 </ul>
