--- a/public/blogs/hugo_page_bundles/index.html
+++ b/public/blogs/hugo_page_bundles/index.html
@@ -54,7 +54,7 @@
 
   <meta itemprop="name" content="Hugo&#39;s page bundles: the basics">
   <meta itemprop="description" content="Learn how to structure content in Hugo using page and branch bundles. A guide to creating, managing, and troubleshooting your site architecture.">
-  <meta itemprop="wordCount" content="7682">
+  <meta itemprop="wordCount" content="7692">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Hugo,page bundles,branch bundles,headless bundle,hugo list command,content organization,Hugo templates,template lookup order,leaf bundle,hugo debug,gohugo,static site generator">
 
@@ -1506,9 +1506,13 @@ This explains why <code>hugo list all</code> only shows your regular pages and s
 </span></span><span style="display:flex;"><span>	}
 </span></span></code></pre></div><h2 id="further-recommended-content">Further recommended content</h2>
 <ul>
-<li><a href="https://hugo-in-action.foofun.cn/docs/part1/chapter4/3/">Better together with page bundles</a>
-from the ebook <a href="https://hugo-in-action.foofun.cn/">Hugo in Action</a>
-by <a href="https://atishay.me/">Atishay Jain</a></li>
+<li>From the ebook <a href="https://hugo-in-action.foofun.cn/">Hugo in Action</a>
+by <a href="https://atishay.me/">Atishay Jain</a>
+<ul>
+<li><a href="https://hugo-in-action.foofun.cn/docs/part1/chapter4/3/">Better together with page bundles</a></li>
+<li><a href="https://hugo-in-action.foofun.cn/docs/part1/chapter6/1/">Using content types, base templates, and blocks to structure templates</a></li>
+</ul>
+</li>
 <li><a href="https://www.ii.com/hugo-bundles/">Introduction to Hugo Bundles</a> by <a href="https://www.ii.com/">Infinite Ink</a></li>
 <li><a href="https://scripter.co/hugo-leaf-and-branch-bundles/">Hugo: Leaf and Branch Bundles</a>
 by <a href="https://github.com/kaushalmodi/">Kaushal Modi</a>.</li>
