feat(blogs/watcher_tree_files): v0.1

--- a/public/blogs_index/index.html
+++ b/public/blogs_index/index.html
@@ -58,7 +58,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs_index/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="JM - Blogs">
-  <meta property="og:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
+  <meta property="og:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="http://localhost:1313/images/cover-image.jpg">
@@ -67,12 +67,12 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="JM - Blogs">
-  <meta name="twitter:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
+  <meta name="twitter:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
 
 
   <meta itemprop="name" content="JM - Blogs">
-  <meta itemprop="description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
-  <meta itemprop="wordCount" content="67">
+  <meta itemprop="description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
+  <meta itemprop="wordCount" content="76">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -315,6 +315,16 @@ window.MathJax = {
 
   <a href="/blogs/latex_for_webdev/" class="no-underline-except-hover">
   $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for <strong>web dev</strong>
+  </a>
+</div>
+
+
+<h3 id="gnu---linux">🐧GNU - Linux</h3>
+
+
+<div class="blogs_index">
+  <a href="/blogs/watcher_tree_files/" class="no-underline-except-hover">
+  A simple watcher for <strong>tree files</strong>
   </a>
 </div>
 
