--- a/public/aoe2_cheatsheet/index.html
+++ b/public/aoe2_cheatsheet/index.html
@@ -179,6 +179,15 @@ details.table-of-contents-all-bold-but-summary > :not(summary) {
 blockquote.alert-caution *:not(p:first-of-type) {
   color: red;
 }
+
+
+ 
+.gallery-slider .swiper-button-next::after,
+.gallery-slider .swiper-button-prev::after {
+  color: #ffffff;
+  background-color: #246B9F;
+  border-radius: 100%;
+}
 </style>
 
 
@@ -257,6 +266,27 @@ window.MathJax = {
 
 
 <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
+
+
+
+
+
+
+
+
+
+
+
+<link rel="stylesheet" href="/plugins/swiper/swiper-bundle.css">
+<link rel="stylesheet" href="/plugins/glightbox/glightbox.css">
+<link rel="stylesheet" href="/css/gallery-slider.css">
+
+<script src="/plugins/swiper/swiper-bundle.js"></script>
+<script src="/plugins/glightbox/glightbox.js"></script>
+<script src="/js/gallery-slider.js"></script>
+
+
+<script src="/js/gallery-slider-init.min.b1687bc15cebdf9f480efcd51af12d2a4598a78ee45e1d29fbbb025f719e8dc9.js" defer></script>
 </head>
   <body>
   <main class="content page-template page-">
