--- a/public/blogs_index/index.html
+++ b/public/blogs_index/index.html
@@ -58,7 +58,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs_index/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="JM - Blogs">
-  <meta property="og:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table Hugo&#39;s plugins: a gallery-slider shortcode &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
+  <meta property="og:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table Hugo&#39;s plugins: a gallery-slider shortcode &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! Tolkien: illustrations! 🖼️ Image editing Create an Instagram mosaic on the terminal">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="http://localhost:1313/images/cover-image.jpg">
@@ -67,12 +67,12 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="JM - Blogs">
-  <meta name="twitter:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table Hugo&#39;s plugins: a gallery-slider shortcode &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
+  <meta name="twitter:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table Hugo&#39;s plugins: a gallery-slider shortcode &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! Tolkien: illustrations! 🖼️ Image editing Create an Instagram mosaic on the terminal">
 
 
   <meta itemprop="name" content="JM - Blogs">
-  <meta itemprop="description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table Hugo&#39;s plugins: a gallery-slider shortcode &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing Create an Instagram mosaic on the terminal">
-  <meta itemprop="wordCount" content="81">
+  <meta itemprop="description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step Hugo&#39;s render hooks: a quick guide Hugo&#39;s page bundles: the basics Installing custom fonts: system-wide setup &amp; Hugo integration Hugo&#39;s shortcodes: CSV to table Hugo&#39;s plugins: a gallery-slider shortcode &lt;/&gt; Web dev 🎨 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 🐧GNU - Linux A simple watcher for tree files 📚 Books Tolkien: books, podcasts and much more! Tolkien: illustrations! 🖼️ Image editing Create an Instagram mosaic on the terminal">
+  <meta itemprop="wordCount" content="83">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -370,6 +370,11 @@ window.MathJax = {
   <a href="/blogs/tolkien/" class="no-underline-except-hover">
   <span style="font-family: 'MiddleEarth JoannaVu', cursive; font-size: 2.3rem;">Tolkien</span>:
   books, podcasts and much more!
+  </a>
+
+  <a href="/blogs/tolkien_illustrations/" class="no-underline-except-hover">
+  <span style="font-family: 'MiddleEarth JoannaVu', cursive; font-size: 2.3rem;">Tolkien</span>:
+  illustrations!
   </a>
 </div>
 
